--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -25,7 +26,8 @@
     "mongoose": "^7.3.1",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "nodemailer": "^6.9.3"
   },
   "devDependencies": {
     "eslint": "7.19.0",
